--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,11 @@ a {
     font-weight: bold;
 }
 
-body {
-    height: 100%;
-    width: 100%;
+body,
+html {
+    height: 100vh;
+    width: 100vw;
+
 }
 
 /* navbar */
@@ -206,17 +208,20 @@ nav {
     margin: 0px 10px;
 }
 
-.novedades-cont {
+.novedades-cont,
+.mejor {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.novedades {
+.novedades,
+.mejorAdidas {
     display: flex;
     align-items: center;
     cursor: pointer;
     margin-left: 15px;
+
 
 
 }
@@ -287,10 +292,16 @@ nav {
 .p-cont p {
     margin: 0px;
 }
-.tendencias h2 {font-weight: bolder;
-font-size: 50px;
-margin-left: 10px;
-margin-bottom: 10px;
+
+.tendencias {
+    margin-bottom: 170px;
+}
+
+.tendencias h2 {
+    font-weight: bolder;
+    font-size: 50px;
+    margin-left: 10px;
+    margin-bottom: 10px;
 }
 
 .productos-novedades {
@@ -298,29 +309,50 @@ margin-bottom: 10px;
 }
 
 .card-tendencia {
-   
+
     height: 400px;
     width: 300px;
     margin: 0px 8px;
 }
+
 .card-tendencia div {
-display: flex;
-flex-direction: column;
-height: 125px;
-justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    height: 125px;
+    justify-content: space-between;
 }
+
 .card-tendencia img {
     height: 400px;
     width: 300px;
 }
-.card-tendencia div a {text-decoration: underline;
-width: 120px;}
-.card-tendencia div a:hover {background-color: black;
-color: white;}
-.card-tendencia div h3 {font-size: 16px;
-font-weight: bold;
+
+.card-tendencia div a {
+    text-decoration: underline;
+    width: 120px;
 }
-.card-tendencia div p {font-size: 13px;}
+
+.card-tendencia div a:hover {
+    background-color: black;
+    color: white;
+}
+
+.card-tendencia div h3 {
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.card-tendencia div p {
+    font-size: 13px;
+}
+
 .card-cont {
     display: flex;
+    
 }
+.articulos {display: flex;}
+.articulos article {width: 600px;
+    margin: 15px;
+}
+.articulos article h2 {font-size: 40px;
+font-weight: bold;}
