--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+@font-face {
+    font-family: "adidas";
+    src: url("../fonts/adidastipo.ttf");
+}
 
 a {
     text-decoration: none;
@@ -15,7 +19,7 @@ body,
 html {
     height: 100vh;
     width: 100vw;
-
+    font-family: "adidas," sans-serif;
 }
 
 /* navbar */
@@ -348,11 +352,66 @@ nav {
 
 .card-cont {
     display: flex;
-    
+
 }
-.articulos {display: flex;}
-.articulos article {width: 600px;
+
+.articulos {
+    display: flex;
+}
+
+.articulos article {
+    width: 600px;
     margin: 15px;
 }
-.articulos article h2 {font-size: 40px;
-font-weight: bold;}
+
+.articulos article h2 {
+    font-size: 40px;
+    font-weight: bold;
+}
+
+.popular h2 {
+    font-size: 40px;
+    font-weight: bold;
+    margin-left: 15px;
+}
+
+.popular-botones {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.popular-botones div {
+    border-bottom: 1px solid black;
+    width: 400px;
+    margin: 20px 10px;
+    padding: 15px;
+
+}
+
+.popular-botones div:hover {
+    border-bottom: 6px solid black;
+}
+
+.popular-botones div a {
+    line-height: 36px;
+    font-size: 36px;
+}
+
+.registrate {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: yellow;
+    height: 130px;
+}
+.registrate h2 a {background-color: black;
+    box-shadow: 4px 4px 5px 0px rgba(0, 0, 0, 0.75);
+color: white;
+font-size: 16px;
+padding: 15px;}
+.registrate h2 {
+    color: black;
+    font-size: 30px;
+    font-weight: bolder;
+}
+.registrate h2 a:hover {color: gray;}
